mostly cleanup, formatting and renaming, small bug fixes